Fixing some alignments

--- a/styles/style.css
+++ b/styles/style.css
@@ -106,7 +106,9 @@
     #typewriter {
     width: 100%;
     font-size: 16px;
+    text-align: justify;
     min-height: 60px;
+    margin-top: 70px;
     }
 
     @keyframes fall {
